policy-controller/namespacelabel/fail-namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nocomply
  labels:
    istio-injection: enabled
