policy-controller/namespacelabel/pass-namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monkey-wrench
  labels:
    istio-injection: enabled
    LoB: "retail_bank"
    ns-owner: "Dave_Grohl"
    tool-owner: "helm"
