policy-controller/namespacelabel/constraint-namespace-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: constraint-namespace-label.yaml
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: "LoB"
      - key: "ns-owner"
      - key: "tool-owner"
